--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Check if students are understanding explanations ",
   "main": "index.js",
   "scripts": {
-    "start": "echo 'TO-DO: run server and client'",
-    "server": "echo 'TO-DO: run the server'",
-    "client": "node client/http-server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "echo 'TO-DO: run server and client'"
   },
   "repository": {
     "type": "git",
@@ -18,9 +15,5 @@
   "bugs": {
     "url": "https://github.com/AlvaroMaceda/classroom-status/issues"
   },
-  "homepage": "https://github.com/AlvaroMaceda/classroom-status#readme",
-  "dependencies": {
-    "connect": "^3.6.6",
-    "serve-static": "^1.13.2"
-  }
+  "homepage": "https://github.com/AlvaroMaceda/classroom-status#readme"
 }
