Firsts test with ws connections

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "echo TO-DO",
+    "start": "node index.js",
+    "dev": "./node_modules/nodemon/bin/nodemon.js index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,9 @@
   },
   "homepage": "https://github.com/AlvaroMaceda/classroom-status#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   }
 }
