--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,12 @@
   "description": "Check if students are understanding explanations. Backend.",
   "main": "index.js",
   "directories": {
-    "test": "test"
+    "tests": "tests"
   },
   "scripts": {
     "start": "node index.js",
     "dev": "./node_modules/nodemon/bin/nodemon.js index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha tests"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.3"
   }
 }
