--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "sinon": "^6.1.5",
+    "sinon-chai": "^3.2.0"
   }
 }
