--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/AlvaroMaceda/classroom-status#readme",
   "dependencies": {
+    "rxjs": "^6.3.1",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
