--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^1.18.3",
     "sinon": "^6.1.5",
     "sinon-chai": "^3.2.0",
-    "socket-io-mock": "^1.0.1"
+    "socket-io-mock": "^1.0.1",
+    "socket.io-client": "^2.1.1"
   }
 }
